# ShiftMods

./: .env.local.example  .gitattributes  .gitignore  LICENSE  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  render.yaml  sanity.config.ts  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/garage/: page.tsx
components/: Header.tsx  HeroSection.tsx  ProductCard.tsx  ProductGrid.tsx
components/cart/: CartDrawer.tsx
components/product/: AddToCartButton.tsx  PortableTextRenderer.tsx  ProductGallery.tsx  ProductInteractions.tsx  VariantSelector.tsx
context/: CartContext.tsx
hooks/: useCarProfile.ts  useRecommendations.ts
lib/: api-client.ts
lib/actions/: cart.ts
lib/sanity/: client.ts  queries.ts  types.ts
lib/shopify/: client.ts  queries.ts  types.ts
lib/utils/: format.ts
sanity/schemaTypes/: editorialProduct.ts  heroSection.ts  (+2 more)
shift-mods-api/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
shift-mods-api/alembic/: env.py
shift-mods-api/alembic/versions/: 388b20bcf59a_initial_schema.py
shift-mods-api/app/: config.py  database.py  main.py
shift-mods-api/app/dependencies/: auth.py  rate_limit.py
shift-mods-api/app/models/: __init__.py  car_profile.py  invite.py  rate_limit.py  user.py
shift-mods-api/app/routers/: admin.py  ai.py  auth.py  users.py
shift-mods-api/app/schemas/: auth.py  car_profile.py  invite.py  recommendation.py
shift-mods-api/app/services/: auth_service.py  gemini_service.py  invite_service.py  rate_limit_service.py  shopify_service.py
(+14 files in other folders)
