[project]
name = "shift-mods-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "pydantic[email]",
    "python-jose[cryptography]",
    "bcrypt",
    "google-genai",
    "httpx",
    "python-multipart",
    "psycopg2-binary",
]

[dependency-groups]
dev = []

